# Graduation-Project

./: .env.example  .gitignore  CLAUDE.md  CNAME  CONTRIBUTING.md  LICENSE  Makefile  PMF.md  Procfile  README.md  Team_Ground_Rule.md  app.py  elevator_speech.md  index.html  pyproject.toml  railway.json  requirements-ci.txt  requirements.txt  requirements_bot.txt  self_demo.md  transparency_report.md  기술스택-plan
GSSC-공모전준비/: [사업계획서] 2026 이화여대 캠퍼스타운 글로벌 학생창업경진대회_할루캐쳐_박세령.docx
configs/: lora_conflict_only.yaml  prompting_conflict_aware.yaml  rag_base.yaml
course/: PMF.md  elevator_speech.md  elevator_speech_team03.md  nlp_paper_roadmap.md  transparency_report.md
data/: README.md
doc/: 0228-회의  README.md  elevator_speech.md  elevator_speech_team03.md
docs/: README.md  ai_transparency_report.md  architecture.md  benchmark_selection.md  decision_log.md  demo.md  experiment_design.md  presentation.md  project_brief.md  related_work.md  research_plan.md  rq_to_implementation_map.md  team_contributions.md  telegram_bot_ops.md  verification_checklist.md
eval/: evaluate_stub.py
finetuning/: README.md  train_stub.py
prompts/: judge_prompt.md
rag/: README.md  chunker.py  document_loader.py  embedder.py  pipeline.py  pipeline_stub.py  prompt_builder.py  retriever.py  vector_store.py
results/: README.md
scripts/: export_presentation.sh  run_batch.py  run_pipeline.py  telegram_bot.py  validate_preference_data.py
tests/: README.md  test_build_preference_pairs.py  test_eval_metrics.py  test_preference_schema.py  (+5 more)
(+95 files in other folders)
