[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alltology"
version = "0.1.0"
description = "Conflict-Aware PA-RAG: Preference Learning for RAG Knowledge Conflict Resolution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Alltology Team"},
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.4.0",
    "faiss-cpu>=1.8.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--ignore=tests/test_train_dry_run.py"
